// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreStatsFilter should render score stats filter 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 scores
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search scores..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="Label--label--QAnfT label quickSelectionOption"
          for="checkbox-1"
        >
          <input
            checked=""
            class="input"
            id="checkbox-1"
            name="checkbox-1"
            type="checkbox"
          />
          Deselect all
          <div
            class="badge badge--unselect"
          >
            2
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-2"
        >
          <input
            class="input"
            id="checkbox-2"
            name="checkbox-2"
            type="checkbox"
          />
          <span
            id="label-tooltip-3"
          >
            ★☆☆☆☆
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-4"
        >
          <input
            checked=""
            class="input"
            id="checkbox-4"
            name="checkbox-4"
            type="checkbox"
          />
          <span
            id="label-tooltip-5"
          >
            ★★☆☆☆
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-6"
        >
          <input
            class="input"
            id="checkbox-6"
            name="checkbox-6"
            type="checkbox"
          />
          <span
            id="label-tooltip-7"
          >
            ★★★☆☆
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-8"
        >
          <input
            checked=""
            class="input"
            id="checkbox-8"
            name="checkbox-8"
            type="checkbox"
          />
          <span
            id="label-tooltip-9"
          >
            ★★★★☆
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-10"
        >
          <input
            class="input"
            id="checkbox-10"
            name="checkbox-10"
            type="checkbox"
          />
          <span
            id="label-tooltip-11"
          >
            ★★★★★
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScoreStatsFilter should render score stats filter in descending order 1`] = `
<div
  class="dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="mr-2 dropdownToggle dropdown-toggle btn btn-secondary"
    type="button"
  >
    <span>
      2 scores
    </span>
  </button>
  <div
    aria-hidden="true"
    class="dropdown dropdown-menu dropdown-menu-right"
    role="menu"
    tabindex="-1"
  >
    <h6
      class="dropdown-item-input dropdownItemInput dropdown-header"
      tabindex="-1"
    >
      <input
        class="form-control"
        placeholder="Search scores..."
        type="text"
        value=""
      />
    </h6>
    <button
      class="component dropdown-item"
      role="menuitem"
      tabindex="0"
    >
      <div
        class="checkbox"
      >
        <label
          class="Label--label--QAnfT label quickSelectionOption"
          for="checkbox-12"
        >
          <input
            checked=""
            class="input"
            id="checkbox-12"
            name="checkbox-12"
            type="checkbox"
          />
          Deselect all
          <div
            class="badge badge--unselect"
          >
            2
          </div>
        </label>
      </div>
    </button>
    <div
      class="dropdownDivider dropdown-divider"
      tabindex="-1"
    />
    <div
      class="content"
    >
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-13"
        >
          <input
            checked=""
            class="input"
            id="checkbox-13"
            name="checkbox-13"
            type="checkbox"
          />
          <span
            id="label-tooltip-14"
          >
            ★★★
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-15"
        >
          <input
            class="input"
            id="checkbox-15"
            name="checkbox-15"
            type="checkbox"
          />
          <span
            id="label-tooltip-16"
          >
            ★★☆
          </span>
        </label>
      </div>
      <div
        class="wrapperItem"
      >
        <label
          class="Label--label--QAnfT label labelItem"
          for="checkbox-17"
        >
          <input
            checked=""
            class="input"
            id="checkbox-17"
            name="checkbox-17"
            type="checkbox"
          />
          <span
            id="label-tooltip-18"
          >
            ★☆☆
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;
